testcases/errors/055_VoidType1_AC.c
void hello() {
}

int main() {
    sizeof(hello());
    return 0;
}